# DAFX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CombFilters/: FIRCombFilter.h  IIRCombFilter.h
DelayLine/: DelayLine.h
Effects/MultiBandEffect/: MultiBandEffect.jucer
Effects/MultiBandEffect/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Effects/Phasing/: Phasing.jucer
Effects/Phasing/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Effects/Vibrato/: Vibrato.jucer
Effects/Vibrato/Source/: PluginProcessor.cpp  PluginProcessor.h
Effects/WahWahFilter/: WahWahFilter.jucer
Effects/WahWahFilter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Filters/: FirstOrder-Filters.h  SecondOrder-Filters.h  SecondOrder-Shelving-Filters.h
LFO/: WaveTableOscillator.h
LFO/WaveShapes/: Hanning.h  Sawtooth.h  SineWave.h  Square.h  Triangle.h
Utility/: Interpolation.h  gain_block.h
libs/DAFX/CombFilters/: FIRCombFilter.h  IIRCombFilter.h  NaturalSoundingCombFilter.h  UniversalCombFilter.h
libs/DAFX/DelayLine/: DelayLine.h
libs/DAFX/Dynamics/: Limiter.h
libs/DAFX/EQ/: ParametricEQ.h
libs/DAFX/Filters/: FirstOrder-Filters.h  FirstOrder-Shelving-Filters.h  SecondOrder-butterworth-bandstop.h  so_hpf_butterworth.h  so_low_butterworth.h
libs/DAFX/LFO/: WaveTableOscillator.h
libs/DAFX/Utility/: Block_Smoothing.h  Interpolation.h
libs/DAFX/WaveShapes/: Sine.h  UniSine.h
plugins/: CMakeLists.txt
plugins/CombFilter/: CMakeLists.txt
plugins/CombFilter/source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/CombFilter/source/pluginparamers/: PluginParameters.cpp  PluginParameters.h
plugins/ParametricEQ/: CMakeLists.txt
plugins/ParametricEQ/source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
plugins/ParametricEQ/source/pluginparamers/: PluginParameters.cpp  PluginParameters.h
source/: PluginProcessor.cpp  PluginProcessor.h
